creata navbar laterale e tasto upgrade

--- a/index.html
+++ b/index.html
@@ -5,13 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/layout12.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>    
     <div class="container-fluid">
         <header>
-            <nav class="sidebar"></nav>
+            <nav class="sidebar">
+                <div class="top-buttons">
+                    <div class="logo"><a href="#"><img src="./img/logo-small.svg" alt="Spotify"></a></div>
+                    <div class="home"><a href=""><img src="./img/home.svg" alt="Home"></a></div>
+                    <div class="search"><a href=""><img src="./img/search.svg" alt="Search"></a></div>
+                    <div class="library"><a href=""><img src="./img/libreria.svg" alt="Library"></a></div>
+                </div>
+                <div class="low-buttons">
+                    <div class="download"><a href=""><img src="./img/download.svg" alt="Download"></a></div>
+                    <div class="my-profile"><a href=""><img src="./img/profile.svg" alt="Profile"></a></div>
+                </div>
+            </nav>
+
+            <div class="upgrade-button">
+                <p>Effettua l'Upgrade</p>
+            </div>
+
+
         </header>
         <main>
         <div>
