--- a/index.html
+++ b/index.html
@@ -35,16 +35,16 @@
         </header>
         <main>
             <div class="row text-center">
-                <div class="col-3">In evidenza</div>
-                <div class="col-3">podcast</div>
-                <div class="col-3">classifiche</div>
-                <div class="col-3">generi e mood</div>
+                <div class="col-3"><a href="">In evidenza</a></div>
+                <div class="col-3"><a href="">podcast</a></div>
+                <div class="col-3"><a href="">classifiche</a></div>
+                <div class="col-3"><a href="">generi e mood</a></div>
                             
             </div>
             <div class="row text-center">
                 <div class="col-offset-3"></div>
-                <div class="col-3">nuove uscite</div>
-                <div class="col-3">scopri</div>
+                <div class="col-3"><a href="">nuove uscite</a></div>
+                <div class="col-3"><a href="">scopri</a></div>
                 <div class="col-offset-3"></div>
             </div>
     
