--- a/index.html
+++ b/index.html
@@ -100,7 +100,53 @@
             
            
         </main> 
-        <footer></footer>
+        <footer>
+            <div class="row">
+                <div class="col-3 flexbox">                    
+                    <img class="cover-song" src="./img/sinister.jpeg" alt="Sinister">
+                    <div class="information-song">
+                        <p>Sinister</p>
+                        <p>Brano</p>
+                        <p>Nome</p>
+                    </div>
+                    <div class="icons-song">
+                        <i class="far fa-heart"></i>
+                        <i class="far fa-folder"></i>
+                    </div>                    
+                </div>
+                <div class="col-offset-1"></div>
+                <div class="col-5">
+                    <div class="commands flexbox">
+                        <i class="fas fa-random"></i>
+                        <i class="fas fa-step-backward"></i>
+                        <i class="far fa-play-circle"></i>
+                        <i class="fas fa-step-backward"></i>
+                        <i class="fas fa-redo-alt"></i>
+
+                    </div>
+                    <div class="progressbar-song flexbox">
+                        <div class="listening">0:25</div>
+                        <div class="bar">
+                            <div class="listened">
+                            </div>                            
+                        </div>  
+                        <div class="missing">4:35</div>
+                    </div>
+                </div>
+                <div class="col-3 flexbox">
+                    <div class="icons-song">
+                        <i class="fas fa-ellipsis-v"></i>
+                        <i class="fas fa-bars"></i>
+                        <i class="fas fa-desktop"></i>
+                        <i class="fas fa-volume-up"></i>
+                        <div class="bar">
+                            <div class="volume">
+                            </div>                 
+
+                    </div>
+                </div>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
