--- a/index.html
+++ b/index.html
@@ -114,7 +114,6 @@
                         <i class="far fa-folder"></i>
                     </div>                    
                 </div>
-                <div class="col-offset-1"></div>
                 <div class="col-5">
                     <div class="commands flexbox">
                         <i class="fas fa-random"></i>
@@ -122,28 +121,28 @@
                         <i class="far fa-play-circle"></i>
                         <i class="fas fa-step-backward"></i>
                         <i class="fas fa-redo-alt"></i>
-
-                    </div>
+                    </div>                    
                     <div class="progressbar-song flexbox">
                         <div class="listening">0:25</div>
-                        <div class="bar">
+                        <div class="bar-song">
                             <div class="listened">
                             </div>                            
                         </div>  
                         <div class="missing">4:35</div>
                     </div>
                 </div>
-                <div class="col-3 flexbox">
+                <div class="col-4 flexbox">
                     <div class="icons-song">
-                        <i class="fas fa-ellipsis-v"></i>
-                        <i class="fas fa-bars"></i>
+                        <span class="queue">
+                            <i class="fas fa-ellipsis-v"></i>
+                            <i class="fas fa-bars"></i>
+                        </span>
                         <i class="fas fa-desktop"></i>
                         <i class="fas fa-volume-up"></i>
-                        <div class="bar">
-                            <div class="volume">
-                            </div>                 
-
                     </div>
+                    <div class="bar">
+                        <div class="volume">
+                    </div>                
                 </div>
             </div>
         </footer>
