Creata playlist su navbar e sistemato layout generale

--- a/index.html
+++ b/index.html
@@ -13,122 +13,125 @@
 </head>
 <body>    
     <div class="container-fluid">
-        <header>
+        <div class="wrapper flexbox">
             <nav class="sidebar">
                 <div class="top-buttons">
+                    <div class="big-logo"><a href="#"><img src="./img/logo.svg" alt="Big Spotify"></a></div>
                     <div class="logo"><a href="#"><img src="./img/logo-small.svg" alt="Spotify"></a></div>
-                    <div class="home"><a href=""><img src="./img/home.svg" alt="Home"></a></div>
-                    <div class="search"><a href=""><img src="./img/search.svg" alt="Search"></a></div>
-                    <div class="library"><a href=""><img src="./img/libreria.svg" alt="Library"></a></div>
+                    <div class="home"><a href=""><img src="./img/home.svg" alt="Home"><span class="description">Home</span></a></div>
+                    <div class="search"><a href=""><img src="./img/search.svg" alt="Search"><span class="description">Cerca</span></a></div>
+                    <div class="library"><a href=""><img src="./img/libreria.svg" alt="Library"><span class="description">La tua libreria</span></a></div>
+                </div>
+                <div class="playlist">
+                    <h5>PLAYLIST</h5>
+                    <p class="creation-playlist"><i class="fas fa-plus-square"></i>Crea Playlist</p>
+                    <p class="name-playlist">Nome Playlist</p>
+                    <p class="name-playlist">Nome Playlist</p>
+                    <p class="name-playlist">Nome Playlist</p>
+                    <p class="name-playlist">Nome Playlist</p>
+                    <p class="name-playlist">Nome Playlist</p>
+                    <p class="name-playlist">Nome Playlist</p>
+                    <p class="name-playlist">Nome Playlist</p>
                 </div>
                 <div class="low-buttons">
                     <div class="download"><a href=""><img src="./img/download.svg" alt="Download"></a></div>
                     <div class="my-profile"><a href=""><img src="./img/profile.svg" alt="Profile"></a></div>
                 </div>
             </nav>
-
-            <div class="upgrade-button">
-                <p>Effettua l'Upgrade</p>
-            </div>
-
-
-        </header>
-        <main>
-            <div class="row">
-                <div class="col-3"><a href="">In evidenza</a></div>
-                <div class="col-3"><a href="">podcast</a></div>
-                <div class="col-3"><a href="">classifiche</a></div>
-                <div class="col-3"><a href="">generi e mood</a></div>
-                            
-            </div>
-            <div class="row">
-                <div class="col-offset-3"></div>
-                <div class="col-3"><a href="">nuove uscite</a></div>
-                <div class="col-3"><a href="">scopri</a></div>
-                <div class="col-offset-3"></div>
-            </div>
-            <p>Recently played</p>
-            <div class="row">               
-                <div class="col-6">
-                    <img src="./img/metal_lifting.jpg" alt="Heavy Metal">
-                    <div class="album-information">
-                        <p class="name-album text-center">Heavy metal</p>
-                        <p class="author text-center">Subtitle</p>
+            <main>
+                <header>
+                    <div class="upgrade-button">
+                        <p>Effettua l'Upgrade</p>
+                    </div>
+                </header>
+                <div class="row j-center">
+                    <div class="col-3"><a href="">In evidenza</a></div>
+                    <div class="col-3"><a href="">podcast</a></div>
+                    <div class="col-3"><a href="">classifiche</a></div>
+                    <div class="col-3"><a href="">generi e mood</a></div>
+                    <div class="col-3"><a href="">nuove uscite</a></div>
+                    <div class="col-3"><a href="">scopri</a></div>
+                </div>
+                <!-- INIZIO ALBUM  -->
+                <p>Recently played</p>
+                <div class="row">
+                    <div class="col-6">
+                        <img src="./img/metal_lifting.jpg" alt="Heavy Metal">
+                        <div class="album-information">
+                            <p class="name-album text-center">Heavy metal</p>
+                            <p class="author text-center">Subtitle</p>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <img src="./img/stranger.jpeg" alt="Stranger Things">
+                        <div class="album-information">
+                            <p class="name-album text-center">Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)</p>
+                            <p class="author text-center">Kyle Dixon & Micheal Stein</p>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <img src="./img/aquietplace.jpeg" alt="A Quiet Place">
+                        <div class="album-information">
+                            <p class="name-album text-center">A quiet place</p>
+                            <p class="author text-center">Subtitle</p>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <img src="./img/split.jpeg" alt="Stranger Things">
+                        <div class="album-information">
+                            <p class="name-album text-center">Split</p>
+                            <p class="author text-center">Subtitle</p>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <img src="./img/cure.jpeg" alt="Cure">
+                        <div class="album-information">
+                            <p class="name-album text-center">A cure for wellness</p>
+                            <p class="author text-center">Subtitle</p>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <img src="./img/sinister.jpeg" alt="Sinister">
+                        <div class="album-information">
+                            <p class="name-album text-center">Sinister</p>
+                            <p class="author text-center">Subtitle</p>
+                        </div>
                     </div>
                 </div>
-                <div class="col-6">
-                    <img src="./img/stranger.jpeg" alt="Stranger Things">
-                    <div class="album-information">
-                        <p class="name-album text-center">Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)</p>
-                        <p class="author text-center">Kyle Dixon & Micheal Stein</p>
+                <p>Creato per John Doe</p>
+                <p class="author">Più ascolti, più accurati saranno i suggerimenti.</p>
+                <div class="row">
+                    <div class="col-6">
+                        <img src="./img/radar.jpeg" alt="Release Radar">
+                        <div class="album-information">
+                            <p class="name-album text-center">Release Radar</p>
+                        </div>
                     </div>
-                </div>               
-            </div>
-            <div class="row">
-                <div class="col-6">
-                    <img src="./img/aquietplace.jpeg" alt="A Quiet Place">
-                    <div class="album-information">
-                        <p class="name-album text-center">A quiet place</p>
-                        <p class="author text-center">Subtitle</p>
-                    </div>
-                </div>
-                <div class="col-6">
-                    <img src="./img/split.jpeg" alt="Stranger Things">
-                    <div class="album-information">
-                        <p class="name-album text-center">Split</p>
-                        <p class="author text-center">Subtitle</p>
+                    <div class="col-6">
+                        <img src="./img/mixdaily.jpeg" alt="Daily Mix">
+                        <div class="album-information">
+                            <p class="name-album text-center">Daily Mix 1</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-6">
-                    <img src="./img/cure.jpeg" alt="Cure">
-                    <div class="album-information">
-                        <p class="name-album text-center">A cure for wellness</p>
-                        <p class="author text-center">Subtitle</p>
+                <p>Artisti più popolari</p>
+                <p class="author">Più ascolti, più accurati saranno i suggerimenti.</p>
+                <div class="row">
+                    <div class="col-6 flexbox">
+                        <div class="circle del-rey">
+                            <!-- <img src="./img/youg.jpeg" alt="Lana Del Rey"> -->
+                            <p class="name-album text-center">Lana del Rey</p>
+                        </div>
+                    </div>
+                    <div class="col-6 flexbox">
+                        <div class="circle einaudi">
+                            <!-- <img src="./img/einaudi.jpeg" alt="Ludovico Einaudi"> -->
+                            <p class="name-album text-center">Ludovico Einaudi</p>
+                        </div>
                     </div>
                 </div>
-                <div class="col-6">
-                    <img src="./img/sinister.jpeg" alt="Sinister">
-                    <div class="album-information">
-                        <p class="name-album text-center">Sinister</p>
-                        <p class="author text-center">Subtitle</p>
-                    </div>
-                </div>
-            </div>
-            <p>Creato per John Doe</p>
-            <p class="author">Più ascolti, più accurati saranno i suggerimenti.</p>
-            <div class="row">
-                <div class="col-6">
-                    <img src="./img/radar.jpeg" alt="Release Radar">
-                    <div class="album-information">
-                        <p class="name-album text-center">Release Radar</p>
-                    </div>
-                </div>
-                <div class="col-6">
-                    <img src="./img/mixdaily.jpeg" alt="Daily Mix">
-                    <div class="album-information">
-                        <p class="name-album text-center">Daily Mix 1</p>
-                    </div>
-                </div>
-            </div>     
-            <p>Artisti più popolari</p>
-            <p class="author">Più ascolti, più accurati saranno i suggerimenti.</p>
-            <div class="row">
-                <div class="col-6 flexbox">
-                    <div class="circle del-rey">
-                        <!-- <img src="./img/youg.jpeg" alt="Lana Del Rey"> -->
-                        <p class="name-album text-center">Lana del Rey</p>
-                    </div>                   
-                </div>
-                <div class="col-6 flexbox">
-                    <div class="circle einaudi">
-                        <!-- <img src="./img/einaudi.jpeg" alt="Ludovico Einaudi"> -->
-                        <p class="name-album text-center">Ludovico Einaudi</p>
-                    </div>                 
-                </div>
-            </div>   
-        </main> 
+            </main>
+        </div>
         <footer>
             <div class="row">
                 <div class="col-3 flexbox">                    
