Fatta risoluzione Sm

--- a/index.html
+++ b/index.html
@@ -18,24 +18,24 @@
                 <div class="top-buttons">
                     <div class="big-logo"><a href="#"><img src="./img/logo.svg" alt="Big Spotify"></a></div>
                     <div class="logo"><a href="#"><img src="./img/logo-small.svg" alt="Spotify"></a></div>
-                    <div class="home"><a href=""><img src="./img/home.svg" alt="Home"><span class="description">Home</span></a></div>
-                    <div class="search"><a href=""><img src="./img/search.svg" alt="Search"><span class="description">Cerca</span></a></div>
-                    <div class="library"><a href=""><img src="./img/libreria.svg" alt="Library"><span class="description">La tua libreria</span></a></div>
-                </div>
-                <div class="playlist">
-                    <h5>PLAYLIST</h5>
-                    <p class="creation-playlist"><i class="fas fa-plus-square"></i>Crea Playlist</p>
-                    <p class="name-playlist">Nome Playlist</p>
-                    <p class="name-playlist">Nome Playlist</p>
-                    <p class="name-playlist">Nome Playlist</p>
-                    <p class="name-playlist">Nome Playlist</p>
-                    <p class="name-playlist">Nome Playlist</p>
-                    <p class="name-playlist">Nome Playlist</p>
-                    <p class="name-playlist">Nome Playlist</p>
+                    <div class="home"><a href="#"><img src="./img/home.svg" alt="Home"><span class="description">Home</span></a></div>
+                    <div class="search"><a href="#"><img src="./img/search.svg" alt="Search"><span class="description">Cerca</span></a></div>
+                    <div class="library"><a href="#"><img src="./img/libreria.svg" alt="Library"><span class="description">La tua libreria</span></a></div>
+                    <div class="playlist">
+                        <h5>PLAYLIST</h5>
+                        <p class="creation-playlist"><i class="fas fa-plus-square"></i>Crea Playlist</p>
+                        <p class="name-playlist">Nome Playlist</p>
+                        <p class="name-playlist">Nome Playlist</p>
+                        <p class="name-playlist">Nome Playlist</p>
+                        <p class="name-playlist">Nome Playlist</p>
+                        <p class="name-playlist">Nome Playlist</p>
+                        <p class="name-playlist">Nome Playlist</p>
+                        <p class="name-playlist">Nome Playlist</p>
+                    </div>
                 </div>
                 <div class="low-buttons">
-                    <div class="download"><a href=""><img src="./img/download.svg" alt="Download"></a></div>
-                    <div class="my-profile"><a href=""><img src="./img/profile.svg" alt="Profile"></a></div>
+                    <div class="download"><a href=""><img src="./img/download.svg" alt="Download"><span class="description">Installa app</span></a></div>
+                    <div class="my-profile"><a href=""><div class="bckg-profile"><img src="./img/profile.svg" alt="Profile"></div><span class="description">John Doe</span></a></div>
                 </div>
             </nav>
             <main>
