fatte risoluzioni md e lg

--- a/index.html
+++ b/index.html
@@ -44,53 +44,55 @@
                         <p>Effettua l'Upgrade</p>
                     </div>
                 </header>
-                <div class="row j-center">
-                    <div class="col-3"><a href="">In evidenza</a></div>
-                    <div class="col-3"><a href="">podcast</a></div>
-                    <div class="col-3"><a href="">classifiche</a></div>
-                    <div class="col-3"><a href="">generi e mood</a></div>
-                    <div class="col-3"><a href="">nuove uscite</a></div>
-                    <div class="col-3"><a href="">scopri</a></div>
-                </div>
+                <div class="row j-center text-center">
+                    <div class="col-offset-2"></div>
+                    <div class="col-3 col-md col-lg-1"><a href="#">In evidenza</a></div>
+                    <div class="col-3 col-md col-lg-1"><a href="#">podcast</a></div>
+                    <div class="col-3 col-md col-lg-1"><a href="#">classifiche</a></div>
+                    <div class="col-3 col-md col-lg-1"><a href="#">generi e mood</a></div>
+                    <div class="col-3 col-md col-lg-1"><a href="#">nuove uscite</a></div>
+                    <div class="col-3 col-md col-lg-1"><a href="#">scopri</a></div>
+                    <div class="col-offset-2"></div>
+                </div>  
                 <!-- INIZIO ALBUM  -->
                 <p>Recently played</p>
                 <div class="row">
-                    <div class="col-6">
+                    <div class="col-6 col-md-3 col-lg-2">
                         <img src="./img/metal_lifting.jpg" alt="Heavy Metal">
-                        <div class="album-information">
+                        <div class="album-information"> 
                             <p class="name-album text-center">Heavy metal</p>
                             <p class="author text-center">Subtitle</p>
                         </div>
                     </div>
-                    <div class="col-6">
+                    <div class="col-6 col-md-3 col-lg-2">
                         <img src="./img/stranger.jpeg" alt="Stranger Things">
                         <div class="album-information">
                             <p class="name-album text-center">Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)</p>
                             <p class="author text-center">Kyle Dixon & Micheal Stein</p>
                         </div>
                     </div>
-                    <div class="col-6">
+                    <div class="col-6 col-md-3 col-lg-2">
                         <img src="./img/aquietplace.jpeg" alt="A Quiet Place">
                         <div class="album-information">
                             <p class="name-album text-center">A quiet place</p>
                             <p class="author text-center">Subtitle</p>
                         </div>
                     </div>
-                    <div class="col-6">
+                    <div class="col-6 col-md-3 col-lg-2">
                         <img src="./img/split.jpeg" alt="Stranger Things">
                         <div class="album-information">
                             <p class="name-album text-center">Split</p>
                             <p class="author text-center">Subtitle</p>
                         </div>
                     </div>
-                    <div class="col-6">
+                    <div class="col-6 col-md-3 col-lg-2">
                         <img src="./img/cure.jpeg" alt="Cure">
                         <div class="album-information">
                             <p class="name-album text-center">A cure for wellness</p>
                             <p class="author text-center">Subtitle</p>
                         </div>
                     </div>
-                    <div class="col-6">
+                    <div class="col-6 col-md-3 col-lg-2">
                         <img src="./img/sinister.jpeg" alt="Sinister">
                         <div class="album-information">
                             <p class="name-album text-center">Sinister</p>
@@ -98,35 +100,39 @@
                         </div>
                     </div>
                 </div>
-                <p>Creato per John Doe</p>
-                <p class="author">Più ascolti, più accurati saranno i suggerimenti.</p>
-                <div class="row">
-                    <div class="col-6">
-                        <img src="./img/radar.jpeg" alt="Release Radar">
-                        <div class="album-information">
-                            <p class="name-album text-center">Release Radar</p>
+                <div class="custom-playlist">
+                    <p>Creato per John Doe</p>
+                    <p class="author">Più ascolti, più accurati saranno i suggerimenti.</p>
+                    <div class="row">
+                        <div class="col-6 col-md-3 col-lg-2">
+                            <img src="./img/radar.jpeg" alt="Release Radar">
+                            <div class="album-information">
+                                <p class="name-album text-center">Release Radar</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-6">
-                        <img src="./img/mixdaily.jpeg" alt="Daily Mix">
-                        <div class="album-information">
-                            <p class="name-album text-center">Daily Mix 1</p>
+                        <div class="col-6 col-md-3 col-lg-2">
+                            <img src="./img/mixdaily.jpeg" alt="Daily Mix">
+                            <div class="album-information">
+                                <p class="name-album text-center">Daily Mix 1</p>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <p>Artisti più popolari</p>
-                <p class="author">Più ascolti, più accurati saranno i suggerimenti.</p>
-                <div class="row">
-                    <div class="col-6 flexbox">
-                        <div class="circle del-rey">
-                            <!-- <img src="./img/youg.jpeg" alt="Lana Del Rey"> -->
-                            <p class="name-album text-center">Lana del Rey</p>
+                <div class="most-popular">
+                    <p>Artisti più popolari</p>
+                    <p class="author">Più ascolti, più accurati saranno i suggerimenti.</p>
+                    <div class="row">
+                        <div class="col-6 col-md-3 flexbox">
+                            <div class="circle del-rey">
+                                <!-- <img src="./img/youg.jpeg" alt="Lana Del Rey"> -->
+                                <p class="name-album text-center">Lana del Rey</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-6 flexbox">
-                        <div class="circle einaudi">
-                            <!-- <img src="./img/einaudi.jpeg" alt="Ludovico Einaudi"> -->
-                            <p class="name-album text-center">Ludovico Einaudi</p>
+                        <div class="col-6 col-md-3 flexbox">
+                            <div class="circle einaudi">
+                                <!-- <img src="./img/einaudi.jpeg" alt="Ludovico Einaudi"> -->
+                                <p class="name-album text-center">Ludovico Einaudi</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -134,7 +140,7 @@
         </div>
         <footer>
             <div class="row">
-                <div class="col-3 flexbox">                    
+                <div class="col-3 col-lg-2 flexbox">                    
                     <img class="cover-song" src="./img/sinister.jpeg" alt="Sinister">
                     <div class="information-song">
                         <p>Sinister</p>
@@ -146,6 +152,7 @@
                         <i class="far fa-folder"></i>
                     </div>                    
                 </div>
+                <div class="col-lg-offset-1"></div>
                 <div class="col-6">
                     <div class="commands flexbox">
                         <i class="fas fa-random"></i>
@@ -163,7 +170,8 @@
                         <div class="missing">4:35</div>
                     </div>
                 </div>
-                <div class="col-3 flexbox">
+                <div class="col-lg-offset-1"></div>
+                <div class="col-3 col-lg-2 flexbox">
                     <div class="icons-song">
                         <span class="queue">
                             <i class="fas fa-ellipsis-v"></i>
