sistemato hr separatore delle ultime due sezioni sulla sidebar

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 </div>
                 <div class="low-buttons">
                     <div class="download"><a href=""><img src="./img/download.svg" alt="Download"><span class="description">Installa app</span></a></div>
+                    <div class="hidden-hr"></div>
                     <div class="my-profile"><a href=""><div class="bckg-profile"><img src="./img/profile.svg" alt="Profile"></div><span class="description">John Doe</span></a></div>
                 </div>
             </nav>
