--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
                     </div>
                 </header>
                 <div class="row j-center text-center">
-                    <div class="col-offset-2"></div>
+                    <div class="col-lg-offset-2"></div>
                     <div class="col-3 col-md col-lg-1"><a href="#">In evidenza</a></div>
                     <div class="col-3 col-md col-lg-1"><a href="#">podcast</a></div>
                     <div class="col-3 col-md col-lg-1"><a href="#">classifiche</a></div>
                     <div class="col-3 col-md col-lg-1"><a href="#">generi e mood</a></div>
                     <div class="col-3 col-md col-lg-1"><a href="#">nuove uscite</a></div>
                     <div class="col-3 col-md col-lg-1"><a href="#">scopri</a></div>
-                    <div class="col-offset-2"></div>
+                    <div class="col-lg-offset-2"></div>
                 </div>  
                 <!-- INIZIO ALBUM  -->
                 <p>Recently played</p>
