--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
                     </div>
                 </header>
                 <div class="row j-center text-center">
-                    <div class="col-lg-offset-2"></div>
-                    <div class="col-3 col-md col-lg-1"><a href="#">In evidenza</a></div>
-                    <div class="col-3 col-md col-lg-1"><a href="#">podcast</a></div>
-                    <div class="col-3 col-md col-lg-1"><a href="#">classifiche</a></div>
-                    <div class="col-3 col-md col-lg-1"><a href="#">generi e mood</a></div>
-                    <div class="col-3 col-md col-lg-1"><a href="#">nuove uscite</a></div>
-                    <div class="col-3 col-md col-lg-1"><a href="#">scopri</a></div>
-                    <div class="col-lg-offset-2"></div>
+                    <div class="col-lg-offset-2 col-xl-offset-3"></div>
+                    <div class="col-3 col-md col-lg-1 col-xl-1"><a href="#">In evidenza</a></div>
+                    <div class="col-3 col-md col-lg-1 col-xl-1"><a href="#">podcast</a></div>
+                    <div class="col-3 col-md col-lg-1 col-xl-1"><a href="#">classifiche</a></div>
+                    <div class="col-3 col-md col-lg-1 col-xl-1"><a href="#">generi e mood</a></div>
+                    <div class="col-3 col-md col-lg-1 col-xl-1"><a href="#">nuove uscite</a></div>
+                    <div class="col-3 col-md col-lg-1 col-xl-1"><a href="#">scopri</a></div>
+                    <div class="col-lg-offset-2 col-xl-offset-3"></div>
                 </div>  
                 <!-- INIZIO ALBUM  -->
                 <p>Recently played</p>
@@ -123,13 +123,13 @@
                     <p>Artisti più popolari</p>
                     <p class="author">Più ascolti, più accurati saranno i suggerimenti.</p>
                     <div class="row">
-                        <div class="col-6 col-md-3 flexbox">
+                        <div class="col-6 col-md-3 col-xl-2 flexbox">
                             <div class="circle del-rey">
                                 <!-- <img src="./img/youg.jpeg" alt="Lana Del Rey"> -->
                                 <p class="name-album text-center">Lana del Rey</p>
                             </div>
                         </div>
-                        <div class="col-6 col-md-3 flexbox">
+                        <div class="col-6 col-md-3 col-xl-2 flexbox">
                             <div class="circle einaudi">
                                 <!-- <img src="./img/einaudi.jpeg" alt="Ludovico Einaudi"> -->
                                 <p class="name-album text-center">Ludovico Einaudi</p>
@@ -145,16 +145,16 @@
                     <img class="cover-song" src="./img/sinister.jpeg" alt="Sinister">
                     <div class="information-song">
                         <p>Sinister</p>
-                        <p>Brano</p>
+                        <p>Brano</p><span>Nome</span>
                         <p>Nome</p>
                     </div>
                     <div class="icons-song">
-                        <i class="far fa-heart"></i>
+                        <i class="far fa-heart"></i>    
                         <i class="far fa-folder"></i>
                     </div>                    
                 </div>
-                <div class="col-lg-offset-1"></div>
-                <div class="col-6">
+                <div class="col-lg-offset-1 col-xl-offset-2"></div>
+                <div class="col-6 col-xl-4">
                     <div class="commands flexbox">
                         <i class="fas fa-random"></i>
                         <i class="fas fa-step-backward"></i>
@@ -171,7 +171,7 @@
                         <div class="missing">4:35</div>
                     </div>
                 </div>
-                <div class="col-lg-offset-1"></div>
+                <div class="col-lg-offset-1 col-xl-offset-2"></div>
                 <div class="col-3 col-lg-2 flexbox">
                     <div class="icons-song">
                         <span class="queue">
