Aggiunti effetti active

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <!-- PULSANTI MENU DI NAVIGAZIONE IN ALTO -->
                 <div class="row j-center text-center">
                     <div class="col-lg-offset-2 col-xl-offset-3"></div>
-                    <div class="col-3 col-md col-lg-1 col-xl-1"><a href="#">In evidenza</a></div>
+                    <div class="col-3 col-md col-lg-1 col-xl-1 active"><a href="#">In evidenza</a></div>
                     <div class="col-3 col-md col-lg-1 col-xl-1"><a href="#">podcast</a></div>
                     <div class="col-3 col-md col-lg-1 col-xl-1"><a href="#">classifiche</a></div>
                     <div class="col-3 col-md col-lg-1 col-xl-1"><a href="#">generi e mood</a></div>
@@ -63,44 +63,42 @@
                 <p>Recently played</p>
                 <div class="row" id="recently-played">
                     <div class="col-6 col-md-3 col-lg-2">
-                        <div class="layover">
                             <img src="./img/metal_lifting.jpg" alt="Heavy Metal">
-                        </div>
                             <div class="album-information">
                                 <p class="name-album text-center">Heavy metal</p>
                                 <p class="author text-center">Subtitle</p>
                         </div>
                     </div>
                     <div class="col-6 col-md-3 col-lg-2">
-                        <img src="./img/stranger.jpeg" alt="Stranger Things">
+                            <img src="./img/stranger.jpeg" alt="Stranger Things">
                         <div class="album-information">
                             <p class="name-album text-center">Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)</p>
                             <p class="author text-center">Kyle Dixon & Micheal Stein</p>
                         </div>
                     </div>
                     <div class="col-6 col-md-3 col-lg-2">
-                        <img src="./img/aquietplace.jpeg" alt="A Quiet Place">
+                            <img src="./img/aquietplace.jpeg" alt="A Quiet Place">
                         <div class="album-information">
                             <p class="name-album text-center">A quiet place</p>
                             <p class="author text-center">Subtitle</p>
                         </div>
                     </div>
                     <div class="col-6 col-md-3 col-lg-2">
-                        <img src="./img/split.jpeg" alt="Stranger Things">
+                            <img src="./img/split.jpeg" alt="Stranger Things">
                         <div class="album-information">
                             <p class="name-album text-center">Split</p>
                             <p class="author text-center">Subtitle</p>
                         </div>
                     </div>
                     <div class="col-6 col-md-3 col-lg-2">
-                        <img src="./img/cure.jpeg" alt="Cure">
+                            <img src="./img/cure.jpeg" alt="Cure">
                         <div class="album-information">
                             <p class="name-album text-center">A cure for wellness</p>
                             <p class="author text-center">Subtitle</p>
                         </div>
                     </div>
                     <div class="col-6 col-md-3 col-lg-2">
-                        <img src="./img/sinister.jpeg" alt="Sinister">
+                            <img src="./img/sinister.jpeg" alt="Sinister">
                         <div class="album-information">
                             <p class="name-album text-center">Sinister</p>
                             <p class="author text-center">Subtitle</p>
